# Atlas_OLD

./: .dev-gate-passed  .env  .env.template  .gitignore  .pre-commit-config.yaml  082225.md  082225_FINAL.md  ALERT_SETUP_INSTRUCTIONS.md  APPLE_INGESTION_GUIDE.md  ATLAS_CODE_REVIEW_SUMMARY.md  ATLAS_COMPLETION_FINAL_TASKS.md  ATLAS_COMPLETION_PLAN.md  ATLAS_COMPONENT_INDEX.md  ATLAS_IMPLEMENTATION_COMPLETE.md  ATLAS_IMPLEMENTATION_REALITY_REPORT.md  ATLAS_IMPLEMENTATION_STATUS.md  ATLAS_REALITY_STATUS_082225.md  ATLAS_ROADMAP_082325.md  ATLAS_STATUS.md  ATLAS_TESTING_REPORT.md  BACKLOG_PROCESSING_COMPLETE.md  BLOCKS_11_13_COMPLETE.md  BLOCK_14_COMPLETE.md  BLOCK_14_EXECUTE_TASKS.md  BLOCK_14_FINAL_STATUS.md  BLOCK_14_PROGRESS.md  BLOCK_14_PROGRESS.py  BLOCK_14_STATUS.md  BLOCK_14_SUMMARY.md  BLOCK_16_COMPLETE.md  BLOCK_16_FINAL_SUMMARY.md  BLOCK_16_IMPLEMENTATION_COMPLETE.md  BLOCK_16_IMPLEMENTATION_SUMMARY.md  BLOCK_16_SUMMARY.md  BLOCK_8_IMPLEMENTATION_SUMMARY.md  BLOCK_9_IMPLEMENTATION_SUMMARY.md  CELEBRATION.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  COMMIT_SUMMARY.md  (+299 more)
.claude/: slash_commands.json
advanced_processing/: advanced_processor.py
analytics/: analytics_engine.py  dashboard.py
api/: analytics_api.py  auth_api.py  capture.py  cognitive_api.py  cognitive_api_fixed.py  content_api.py  main.py  search_api.py  search_server.py  test_api.py  transcript_search.py  unified_server.py
apple_shortcuts/: README.md  __init__.py  contextual_capture.py  integration_example.py  ios_extension.py  reading_list_import.py  siri_shortcuts.py  voice_processing.py
archive/: 07f8c2be43d94559.json  239f7419ed1a9799.json  327c3fda87ce2868.json  5d9f8e8019c31908.json  alert_state.json  circuit_breaker_atlas_integration_test.json  circuit_breaker_background_processing.json  circuit_breaker_database_operations.json  circuit_breaker_llm_operations.json  test_log
atlas_v2/: main.py  (+34 more)
(+53137 files in other folders)
